[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-sdk"
version = "0.1.0"
description = "Python SDK for PulseCheckpoint Runtime"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PulseCheckpoint Contributors", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
]

[project.urls]
Homepage = "https://github.com/your-org/pulsecheckpoint-runtime"
Documentation = "https://github.com/your-org/pulsecheckpoint-runtime#readme"
Repository = "https://github.com/your-org/pulsecheckpoint-runtime"
Issues = "https://github.com/your-org/pulsecheckpoint-runtime/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*"]

[tool.setuptools.package-data]
"pulse.generated" = ["*.pyi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]
